draft build Java 24, WTF lombok to Support java.lang.NoSuchFieldException: com.sun.tools.javac.code.TypeTag :: UNKNOWN