@@ -24,6 +24,7 @@ cd /opt/app
 echo '授权当前用户'
 chmod 555 ./*.jar
 echo '执行....'
+# Java 23开始默认 ZGenerational,所以可以移除-XX:+ZGenerational
 nohup ${JAVA_HOME}/bin/java -Xms500m -Xmx1024m --enable-preview -XX:+UseZGC -XX:+ZGenerational \
   -jar valentine-starter.jar >elog.out 2>&1 &
 echo '启动成功'
